--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <body>
         <h1>
-            음식이란?
+            음식이란? <숙제1>
+            
         </h1>
         <p>
             먹는 재미가 없다면 무슨 재미로 살까? 음식은 우리가 정상적으로 활동할 수 있도록 몸에 필요한 다양한 영양분을 제공해 주고, 보너스로 다양한 맛까지 느낄 수 있게 해 주는 고마운 존재지.
@@ -63,7 +64,14 @@
             target="_blank">
                 <li>출처 = "지식백과<음식>"</li>
             </a>
-        </p3>
+        </p3><br>
+
+        <p>
+            <button onclick="document.location='https://www.naver.com'">숙제2</button>
+            <button onclick="document.location='https://www.naver.com'">숙제3</button>
+            <button onclick="document.location='https://www.naver.com'">숙제4</button>
+
+        </p>
     </Ul>
     </body>
 </html>
