--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </p3><br>
 
         <p>
-            <button onclick="document.location='https://www.naver.com'">숙제2</button>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index2.html'">숙제2</button>
             <button onclick="document.location='https://www.naver.com'">숙제3</button>
             <button onclick="document.location='https://www.naver.com'">숙제4</button>
 
