--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,110 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+        
+        td, th {
+            border: 1px solid #000000;
+            text-align: left;
+            padding: 8px;
+        }
 
+        th {
+            text-align: center;
+            background-color: black;
+            color: white;
+        }
+
+        th.inner {
+            border-width: 0 1px;
+            border-color: white;
+        }
+
+        tr:nth-child(odd) {
+            background-color: #dddddd;
+        }
+        </style>
     <head>
 
     </head>
 
     <body>
         <h2>
-            숙제2
+            국가별 GDP 순위 (10위까지)
         </h2>
+
+        <table style="width: 50%;">
+            <tr>
+                <th class="inner">순위</th>
+              <th class="inner">국가/지역</th>
+              <th>GDP</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>미국</td>
+              <td>27,966,553</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>중국</td>
+              <td>18,560,013</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>독일</td>
+                <td>4,700,875</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>일본</td>
+                <td>4,286,187</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>인도</td>
+                <td>4,105,381
+                </td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>영국</td>
+                <td>3,587,750</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>프랑스</td>
+                <td>3,183,486</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>이탈리아</td>
+                <td>2,284,084</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>브라질</td>
+                <td>2,265,117</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>캐나다</td>
+                <td>2,238,568</td>
+              </tr>
+
+          </table><br>
+          
+
+          <p1>
+            <a href="https://namu.wiki/w/%EA%B5%AD%EA%B0%80%EB%B3%84%20%EB%AA%85%EB%AA%A9%20GDP%20%EC%88%9C%EC%9C%84#s-2.1"
+        target="_blank">
+            <li>"출처"</li>
+        </a>
+          </p1>
+
     </body>
 
 </html>
