--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 
     <body>
         <h2>
-            국가별 GDP 순위 (10위까지)
+            국가별 GDP 순위 (10위까지) <숙제2>
         </h2>
 
         <table style="width: 50%;">
@@ -96,7 +96,7 @@
               </tr>
 
           </table><br>
-          
+
 
           <p1>
             <a href="https://namu.wiki/w/%EA%B5%AD%EA%B0%80%EB%B3%84%20%EB%AA%85%EB%AA%A9%20GDP%20%EC%88%9C%EC%9C%84#s-2.1"
@@ -104,6 +104,13 @@
             <li>"출처"</li>
         </a>
           </p1>
+
+          <p>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index.html'">숙제1</button>
+            <button onclick="document.location='https://www.naver.com'">숙제3</button>
+            <button onclick="document.location='https://www.naver.com'">숙제4</button>
+
+        </p>
 
     </body>
 
