--- a/index3.html
+++ b/index3.html
@@ -51,7 +51,7 @@
         <p>
             <button onclick="document.location='https://yuyeonghwan.github.io/index.html'">숙제1</button>
             <button onclick="document.location='https://yuyeonghwan.github.io/index2.html'">숙제2</button>
-            <button onclick="document.location='https://www.naver.com'">숙제4</button>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index4.html'">숙제4</button>
 
         </p>
     </body>
