--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
         <p>
             <button onclick="document.location='https://yuyeonghwan.github.io/index2.html'">숙제2</button>
-            <button onclick="document.location='https://www.naver.com'">숙제3</button>
-            <button onclick="document.location='https://www.naver.com'">숙제4</button>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index3.html'">숙제3</button>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index4.html'">숙제4</button>
 
         </p>
     </Ul>
