--- a/index2.html
+++ b/index2.html
@@ -107,8 +107,8 @@
 
           <p>
             <button onclick="document.location='https://yuyeonghwan.github.io/index.html'">숙제1</button>
-            <button onclick="document.location='https://www.naver.com'">숙제3</button>
-            <button onclick="document.location='https://www.naver.com'">숙제4</button>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index3.html'">숙제3</button>
+            <button onclick="document.location='https://yuyeonghwan.github.io/index4.html'">숙제4</button>
 
         </p>
 
