--- a/index4.html
+++ b/index4.html
@@ -38,11 +38,11 @@
     </style>
 </head>
 <body>
-    <p style="margin: 0px; font-size: 80px;color: red;"><b>
-        프랑스의 명소 [에펠탑] <숙제4>
-    </p></b>
     <div class="row">
         <div class="column" style="background-color:white;">
+          <p style="margin: 0px; font-size: 80px;color: red;"><b>
+            프랑스의 명소 [에펠탑]
+        </p></b>
             <p style="margin: 10px; font-size: 50px;"><b>
                 에펠탑이란?
             </p></b>
@@ -67,7 +67,8 @@
 
         </div>
         <div class="column" style="background-color:white;">
-          <h4 style="text-align: right; color: red;">2024Y 03M 17D</h4>
+          <h4 style="margin: 0px; text-align: right; font-size: 30px; color: red;">2024Y 03M 17D</h4><br>
+          <h4 style="margin: 0px; text-align: right; font-size: 30px; color: red;">SUNDAY</h4><br>
         <p>
 
             <table>
